--- a/src/Pages/Registration/Registration.css
+++ b/src/Pages/Registration/Registration.css
@@ -8,5 +8,6 @@
 }
 
 .registration-body {
-  flex: 1;
+  min-height: 780px;
+  box-sizing: border-box;
 }
